# Photon-ray-tracer

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  main.js  main.ts  package-lock.json  package.json  style.css
src/: Vector.rs  VectorPool.rs  cube.rs  intersection.rs  lib.rs  material.rs  random.rs  ray.rs  sphere.rs  vector.rs  vector_pool.rs
