[package]
name = "photon-ray-tracer"
version = "0.1.0"
edition = "2021"

description = "A raytracer writen in Rust and TypeScript"
repository = "https://github.com/Zirconium419122/Photon-ray-tracer/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }
wasm-bindgen = "0.2.90"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.67"
features = [
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement", 
  "ImageData"
]
